5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1582_1326.log
== TEST (2019-03-29 16:05:33) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:05:37) 
-- CODE:
print(22)
-- EXECUTION TIME:
0.197339
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:05:51) 
-- CODE:
print( 22 )
-- EXECUTION TIME:
0.144109
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:05:55) 
-- CODE:
print( 22 )
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:06:20) 
-- CODE:
http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1582&turma=223#profile-1326print( 22 )
-- EXECUTION TIME:
0.198899
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1582&turma=223#profile-1326print( 22 )
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:06:23) 
-- CODE:
http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1582&turma=223#profile-1326print( 22 )
-- ERROR:
File "XXXX", line 1
    http://codebench.icomp.ufam.edu.br/index.php?r=trabalho%2Fview&id=1582&turma=223#profile-1326print( 22 )
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:12:54) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:12:59) 
-- CODE:
print(5)
-- EXECUTION TIME:
0.181898
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:13:22) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:13:28) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:13:33) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:16:06) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:16:09) 
-- CODE:
print(22)
-- EXECUTION TIME:
0.175454
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:16:16) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:16:18) 
-- CODE:
print(5)
-- EXECUTION TIME:
0.116637
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:16:19) 
-- CODE:
print(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:16:35) 
-- CODE:
print(65)
-- OUTPUT:
65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:16:38) 
-- CODE:
print(65)
-- EXECUTION TIME:
0.198265
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:17:04) 
-- CODE:
print(22)
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:17:12) 
-- CODE:
print(22)
-- EXECUTION TIME:
0.179282
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 09:17:54) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 09:17:56) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.223385
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
